feat:commiting work

--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
 PORT=8080
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/hobbiton_wallet?sslmode=disable
 JWT_SECRET=your-secret-key-here
+
+
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=dgwallet_db
+DB_PASSWORD=qwertyuiop
+DB_NAME=hobbiton_wallet
+DB_SSLMODE=disable
